...
        .entry("invite-blue", .invites, 0x2A_6A_C6, 0xEC_E4_CE, .stripes(14), "You Are Invited", .stamp),
        .entry("invite-press", .invites, 0xE8_5A_9E, 0xFF_B8_D6, .arcs(5), "Press To Join"),
        .entry("invite-save-date", .invites, 0x1B_3A_6B, 0xC6_A8_58, .arcs(7), "Save The Date", .script),
    ]

    static let partySet: [CoverTemplate] = [
        .entry("party-balloons", .party, 0x59_B5_F0, 0xE8_F7_FF, .orbs(5), "Let's Have A Party"),
        .entry("party-confetti", .party, 0x1B_1B_2E, 0xFF_5E_8A, .confetti(34), "Party"),
        .entry("party-neon", .party, 0x5B_2E_C6, 0x2E_E8_C6, .rays(24), "Big Night"),
        .entry("party-afterhours", .party, 0x2A_1B_45, 0xE8_B8_4A, .dots(7), "After Hours", .stamp),
        .entry("party-birthday", .party, 0xE8_4A_7A, 0xFF_D9_5C, .confetti(28), "Happy Birthday", .script),
        .entry("party-house", .party, 0x0F_3A_6B, 0x4E_BC_FF, .waves(4), "House Party"),
        .entry("party-dinner", .party, 0x6B_1B_2A, 0xE8_B8_8A, .arcs(6), "Dinner & Drinks", .script),
    ]
...
